--- a/app/src/main/res/layout/activity_divison_list.xml
+++ b/app/src/main/res/layout/activity_divison_list.xml
@@ -5,14 +5,17 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
         android:layout_width="match_parent"
+        android:padding="@dimen/activity_horizontal_margin"
         android:layout_height="match_parent"
         tools:context=".Customer.DivisonList">
 
     <android.support.design.widget.TextInputLayout
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
         <EditText
+                android:drawableRight="@android:drawable/ic_menu_search"
                 android:id="@+id/search"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -27,7 +30,6 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.v7.widget.RecyclerView
-            android:layout_marginTop="10dp"
             android:id="@+id/recylerType"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"/>
