--- a/app/src/main/res/layout/activity_rto_list.xml
+++ b/app/src/main/res/layout/activity_rto_list.xml
@@ -4,6 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
+        android:padding="@dimen/activity_horizontal_margin"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".Customer.RtoList">
@@ -13,6 +14,7 @@
             android:layout_height="wrap_content">
 
         <EditText
+                android:drawableRight="@android:drawable/ic_menu_search"
                 android:id="@+id/search"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
