--- a/app/src/main/res/layout/activity_view_fine.xml
+++ b/app/src/main/res/layout/activity_view_fine.xml
@@ -3,6 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:orientation="vertical"
+        android:padding="@dimen/activity_horizontal_margin"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".Customer.ViewStatus">
@@ -11,6 +12,7 @@
             android:layout_height="wrap_content">
 
         <EditText
+                android:drawableRight="@android:drawable/ic_menu_search"
                 android:id="@+id/search"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -24,7 +26,6 @@
 
     </android.support.design.widget.TextInputLayout>
     <android.support.v7.widget.RecyclerView
-            android:layout_marginTop="10dp"
             android:id="@+id/recylerType"
             android:layout_height="wrap_content"
             android:layout_width="match_parent">
