--- a/app/src/main/res/layout/item_division.xml
+++ b/app/src/main/res/layout/item_division.xml
@@ -1,52 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
-              android:padding="@dimen/activity_horizontal_margin"
-              android:gravity="center"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                                    android:orientation="horizontal"
+                                    android:layout_marginTop="10dp"
+                                    android:layout_marginLeft="10dp"
+                                    android:layout_marginRight="10dp"
+                                    android:gravity="center"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
     <LinearLayout
             android:orientation="vertical"
-            android:layout_weight="1"
-            android:layout_width="0dp"
+
+            android:gravity="center"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
-        <TextView
+        <LinearLayout
+                android:padding="@dimen/activity_horizontal_margin"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            <TextView
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:id="@+id/division"
+                    android:text="Hello"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"/>
+            <TextView
+                    android:textSize="14sp"
+                    android:id="@+id/name"
+                    android:text="Hello"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"/>
+            <TextView
+                    android:textSize="14sp"
+                    android:id="@+id/Desigantion"
+                    android:text="Hello"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"/>
 
-                android:id="@+id/name"
-                android:text="Hello"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"/>
 
-        <TextView
+            <TextView
+                    android:drawablePadding="10dp"
+                    android:gravity="center_vertical"
+                    android:drawableLeft="@android:drawable/sym_action_call"
+                    android:layout_marginTop="20dp"
+                    android:id="@+id/contact"
+                    android:text="Hello"
+                    android:autoLink="phone"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"/>
 
-                android:id="@+id/contact"
-                android:text="Hello"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"/>
-
-        <TextView
-
-                android:id="@+id/division"
-                android:text="Hello"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"/>
-
-        <TextView
-
-                android:id="@+id/Desigantion"
-                android:text="Hello"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"/>
-
-        <TextView
-
-                android:id="@+id/email"
-                android:text="Hello"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"/>
+            <TextView
+                    android:drawablePadding="10dp"
+                    android:gravity="center_vertical"
+                    android:drawableLeft="@android:drawable/sym_action_email"
+                    android:autoLink="email"
+                    android:id="@+id/email"
+                    android:text="Hello"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"/>
+        </LinearLayout>
+        <Button
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:drawableEnd="@android:drawable/ic_dialog_map"
+                android:layout_marginTop="10dp"
+                android:paddingRight="10dp"
+                android:drawablePadding="10dp"
+                android:gravity="right|center_vertical"
+                android:text="View Location"
+                android:background="@color/colorPrimary"
+                android:layout_width="match_parent"
+                android:id="@+id/map"
+                android:layout_height="40dp"
+        />
     </LinearLayout>
-    <Button android:layout_width="wrap_content"
-            android:id="@+id/map"
-            android:layout_height="wrap_content"
-            android:text="Location"/>
-</LinearLayout>
+</android.support.v7.widget.CardView>
