--- a/app/src/main/res/layout/item_licence_type.xml
+++ b/app/src/main/res/layout/item_licence_type.xml
@@ -7,39 +7,44 @@
         android:layout_height="wrap_content">
 
 
-        <TextView
-                android:id="@+id/type"
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/licenceType"
-                android:inputType="textEmailAddress"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:textColor="@android:color/white"/>
-
-
-
-
-        <TextView
-                android:layout_weight="1"
-                android:id="@+id/issueDate"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/issueDate"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:textColor="@android:color/white"/>
-
-
-    <Button
-            android:id="@+id/save"
-            style="?android:textAppearanceSmall"
-            android:padding="5dp"
-            android:layout_width="wrap_content"
+    <TextView
+            android:id="@+id/type"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorAccent"
+            android:hint="@string/licenceType"
+            android:inputType="textEmailAddress"
+            android:maxLines="1"
+            android:singleLine="true"
+            android:textColor="@android:color/black"/>
+
+
+    <TextView
+            android:layout_weight="1"
+            android:id="@+id/issueDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/issueDate"
+            android:maxLines="1"
+            android:singleLine="true"
+            android:textColor="@android:color/black"/>
+
+    <ImageView
+            android:visibility="gone"
+            android:id="@+id/save"
+            android:src="@drawable/right"
+            android:padding="10dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:text="@string/action_close"
-            android:textColor="@android:color/black"
-            android:textStyle="bold"/>
+    />
+    <ImageView
+            android:id="@+id/cancel"
+            android:padding="12dp"
+            android:src="@drawable/wrong"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:text="@string/action_close"
+
+    />
 </LinearLayout>
