--- a/app/src/main/res/layout/item_rto_office.xml
+++ b/app/src/main/res/layout/item_rto_office.xml
@@ -1,36 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:padding="@dimen/activity_horizontal_margin"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-    <TextView
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                                    android:orientation="vertical"
+                                    android:layout_marginLeft="2dp"
+                                    android:layout_marginRight="2dp"
+                                    android:layout_marginTop="10dp"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+    <LinearLayout
+            android:orientation="vertical"
+            android:padding="@dimen/activity_horizontal_margin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            <TextView
+                    android:textStyle="bold"
+                    android:textSize="16sp"
+                    android:id="@+id/offices"
+                    android:text="Hello"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"/>
+            <TextView
+                    android:textStyle="bold|italic"
+                    android:textSize="16sp"
+                    android:id="@+id/Code"
+                    android:text="Hello"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"/>
+        </LinearLayout>
+        <TextView
+                android:drawablePadding="10dp"
+                android:gravity="center_vertical"
+                android:drawableLeft="@android:drawable/sym_action_email"
+                android:layout_marginTop="15dp"
+                android:id="@+id/email"
+                android:text="Hello"
+                android:autoLink="email"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"/>
 
-            android:id="@+id/offices"
-            android:text="Hello"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"/>
-
-    <TextView
-
-            android:id="@+id/email"
-            android:text="Hello"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"/>
-
-    <TextView
-
-            android:id="@+id/contact"
-            android:text="Hello"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"/>
-
-    <TextView
-
-            android:id="@+id/Code"
-            android:text="Hello"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"/>
+        <TextView
+                android:autoLink="phone"
+                android:drawablePadding="10dp"
+                android:gravity="center_vertical"
+                android:drawableLeft="@android:drawable/sym_action_call"
+                android:id="@+id/contact"
+                android:text="Hello"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"/>
 
 
-</LinearLayout>
+    </LinearLayout>
+</android.support.v7.widget.CardView>
