--- a/app/src/main/res/layout/item_view_fine.xml
+++ b/app/src/main/res/layout/item_view_fine.xml
@@ -1,19 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:padding="@dimen/activity_horizontal_margin"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-    <TextView android:id="@+id/licenceNo"
-              android:text="123"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"/>
-    <TextView android:id="@+id/section"
-              android:text="123"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"/>
-    <TextView android:id="@+id/price"
-              android:text="123"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"/>
-</LinearLayout>
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                                    android:orientation="horizontal"
+                                    android:layout_marginLeft="2dp"
+                                    android:layout_marginRight="2dp"
+                                    android:layout_marginTop="10dp"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+    <LinearLayout
+            android:orientation="horizontal"
+            android:padding="@dimen/activity_horizontal_margin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content">
+            <TextView android:id="@+id/licenceNo"
+                      android:textStyle="bold"
+                      android:text="123"
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"/>
+            <TextView
+                    android:layout_marginTop="5dp"
+                    android:id="@+id/section"
+                    android:text="123"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+        </LinearLayout>
+        <TextView android:id="@+id/price"
+                  android:layout_marginLeft="10dp"
+                  android:text="123"
+                  android:textSize="18sp"
+                  android:textStyle="bold"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"/>
+    </LinearLayout>
+</android.support.v7.widget.CardView>
